[package]
name = "qr-screen"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
] }
image = "0.25"
rqrr = { version = "0.8", features = ["img"] }
arboard = "3"

[profile.release]
opt-level = 3
lto = true
